<resources>
    <string name="app_name">BOSCall</string>
    <string name="nav_title_alarmlist">Alarmlist</string>
    <string name="nav_title_news">Dates</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_units">Units</string>

    <!-- Alarmlist -->
    <string name="dlg_confirmAllAlarmsDelete_message">Are you sure to delete all alarms? There\'s no way back!</string>

    <!-- Settings texts -->
    <string name="grp_settings_general">General</string>
    <string name="itm_default_alarmtone">Default alarmtone</string>
    <string name="itmDesc_default_alarmtone">Set your default alarmtone.</string>
    <string name="itm_userName">Your Name</string>
    <string name="itmDesc_userName">Your name to identify you in the alarm.</string>
    <string name="itmDefault_userName">FirstName LastName</string>

    <!-- Units texts -->
    <string name="lblUnits">Units</string>
    <string name="dlg_confirmDelete_title">Are you sure?</string>
    <string name="dlg_confirmDelete_message">Are you sure? There\'s no way back!</string>
    <string name="dlg_confirmDelete_btnYes">Yes</string>
    <string name="dlg_confirmDelete_btnNo">No</string>
    <string name="dlg_OK_btnOk">O.K.</string>

    <string name="dlg_userNameUnset_title">Name unset</string>
    <string name="dlg_userNameUnset_message">You did not specify your name in settings.</string>
    <string name="dlg_userNameUnset_btnSetNow">Set now</string>

    <!-- Notification channels -->
    <string name="not_channel_alarm" translatable="false">boscall_alarm_channel</string>
    <string name="not_channel_alarm_name">Alarm Channel</string>
    <string name="not_channel_alarm_desc">Channel for alarms</string>

    <!-- Unit Reader -->
    <string name="unitReader_toast_unit_found">Unit found! Registering now!</string>
    <string name="unitReader_toast_serviceCall_failed">Service call failed, please check your network!</string>
    <string name="unitReader_toast_registration_failed">Registration failed, contact license holder!</string>
    <string name="unitReader_toast_unregistration_failed">Unregistration failed, contact license holder!</string>
    <string name="unitReader_toast_permissionRequest_failed">Please grant camera permission to use the QR Scanner</string>
    <string name="unitReader_toast_reading_failed">Reading the QR-Code failed! Try again!</string>

    <!-- row_item -->
    <string name="unitItem_placeholder" translatable="false">Unit placeholder</string>

    <!-- Splash screen -->
    <string name="splash_Loading">Loading...</string>

    <string name="lblTermine">Dates</string>
</resources>
