<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/grp_settings_general">
        <EditTextPreference
            android:defaultValue="@string/itmDefault_userName"
            android:dialogIcon="@drawable/ic_person_black_24dp"
            android:icon="@drawable/ic_person_black_24dp"
            android:key="itmUserName"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="@string/itmDesc_userName"
            android:title="@string/itm_userName" />
        <RingtonePreference
            android:icon="@drawable/ic_music_note_black_24dp"
            android:key="itmDefaultAlarmtone"
            android:summary="@string/itmDesc_default_alarmtone"
            android:title="@string/itm_default_alarmtone" />
    </PreferenceCategory>
</PreferenceScreen>